java 21 & springboot 3.5.4 & minor fixes